<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>usb_cam</name>
  <version>0.3.7</version>
  <description>A ROS2 Driver for V4L USB Cameras</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
  <author email="benjamin.pitzer@bosch.com">Benjamin Pitzer</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/usb_cam</url>
  <url type="bugtracker">https://github.com/ros-drivers/usb_cam/issues</url>
  <url type="repository">https://github.com/ros-drivers/usb_cam</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
